# cursor_projects

./: .gitignore  README.md
blockchain/blockchain/: Blockchain.py  block.py  cli.py  main.py  node.py  show_wallet.py  test_crypto.py  transaction.py  wallet.py
bridge/: 中国木拱桥智能设计系统方案.pptx
bridge/bridge/: bridge.sln  users.txt
bridge/bridge/bridge/: App.xaml  App.xaml.cs  Bootstrapper.cs  MainWindow.xaml  MainWindow.xaml.cs  bridge.csproj
cpp_related/: CMakeLists.txt
cpp_related/include/mylib/: mylib.h
cpp_related/src/: mylib.cpp
cpp_related/tests/: CMakeLists.txt  test_main.cpp
fastapi_rpac/backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  init.sql  initial_data.py  pytest.ini  requirements.txt
fastapi_rpac/backend/alembic/: env.py
fastapi_rpac/backend/app/: main.py
fastapi_rpac/backend/tests/: conftest.py
hat/src/: README.md  package-lock.json  package.json
hat/src/.github/: copilot-instructions.md
hat/src/src/: App.css  App.tsx
jizhang/Proto/: habits.html  index.html  new-habit.html  profile.html  statistics.html
jizhang/Proto/css/: styles.css
jizhang/ReactProto/: README.md  package-lock.json  package.json
jizhang/ReactProto/public/: index.html
jizhang/ReactProto/src/: App.jsx
uygurtools/aitools/: pom.xml
uygurtools/backend/: Jenkinsfile  docker-compose.yml  pom.xml
uygurtools/backend/aitools/: pom.xml
uygurtools/frontend/: note.md  package-lock.json  package.json  tailwind.config.js
uygurtools/frontend/public/: index.html
uygurtools/frontend/src/: App.tsx  index.tsx  types.ts
uygurtools/proto/: index.html  styles.css
uygurtools/proto/audio/: text2audio.html
(+185 files in other folders)
